# byjf

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  Untitled-1.html  audit.css  audit.js  conftest.py  debug_register.py  login.css  login.js  login教师端.html  main.css  main.js  pyproject.toml  reviewed.css  专业排名（教师端）.html  学校保研政策.html  审核中项目.html  审核界面.html  审核记录.css  审核记录.html  审核记录.js  已审核学生.html
.github/workflows/: ci.yml
backend/: __init__.py  manage.py
backend/apps/authapp/: models.py  permissions.py  serializers.py  tokens.py  urls.py  views.py
backend/apps/dictsapp/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/filesapp/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/policiesapp/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/programsapp/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/rulesapp/: apps.py  models.py  serializers.py  (+2 more)
backend/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontends/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontends/web-admin/: admin-audit.html  admin-logs.html  admin-reports.html  admin-settings.html  admin-statistics.html  admin-users.html  index.html
frontends/web-student/: .env.production  index.html  login.html  package.json  vite.config.ts  专业排名.html  个人主页.html  已经获得的加分项.html  我的保研计划.html  新增竞赛成绩.html
frontends/web-teacher/: .eslintrc.cjs  index.html  专业排名（教师端）.html  审核界面.html  已审核学生.html
pg-plus/: .env.example  .gitignore  AGENTS.md  Makefile
pg-plus/backend/: requirements.txt
pg-plus/nginx/: site.conf
pg-plus/spec/: openapi.yaml
pg-plus/web-admin/: .eslintrc.cjs  index.html  package.json  vite.config.ts
pg-plus/web-student/: index.html  login.html  package.json  tsconfig.json  个人主页.html  已经获得的加分项.html  我的保研计划.html  新增竞赛成绩.html
pg-plus/web-teacher/: Untitled-1.html  login教师端.html  package.json  vite.config.ts  学校保研政策.html  审核中项目.html  审核记录.html
scripts/: dev.sh  seed.py
spec/: openapi.yaml
web-admin/src/: App.vue
web-student/: index.html  login.html  vite.config.ts  专业排名.html  学校保研政策.html
web-student/scripts/: plan.js  policy.js  profile.js
web-student/styles/: competition.css  index.css  login.css  ranking.css
web-teacher/: 专业排名（教师端）.html
web-teacher/styles/: common.css  dashboard.css
(+128 files in other folders)
